k8s/apps/arr-stack/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: arr-stack
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeAffinity:
        preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
                - key: node-role/worker
                  operator: In
                  values: ["true"]
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:4.0.20
          ports:
            - containerPort: &port 8989
              name: http

          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: media-root
              mountPath: /data

          livenessProbe:
            httpGet:
              path: /ping
              port: *port
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /ping
              port: *port
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"

      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: media-root
          persistentVolumeClaim:
            claimName: media-root
