k8s/apps/arr-stack/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: arr-stack
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &domain sonarr.${CLUSTER_DOMAIN}
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: arr-stack-authentik@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - *domain
      secretName: sonarr-tls
  rules:
    - host: *domain
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  number: 8989
            path: /
            pathType: Prefix
